--- a/lms/backend/views/verified.ejs
+++ b/lms/backend/views/verified.ejs
@@ -33,10 +33,10 @@
     }
 </style>
 <script>
-    window.onload =  ()=>{
-        setTimeout(() => {
-                window.location.href =  "http://localhost:4200/login"
-        }, 1000);
-    }
+    // window.onload =  ()=>{
+    //     setTimeout(() => {
+    //             window.location.href =  ""
+    //     }, 1000);
+    // }
 </script>
 </html>
